[gd_scene load_steps=6 format=3 uid="uid://b2i8tmpnfqoyf"]

[ext_resource type="Script" path="res://Scripts/Player/camera_rig.gd" id="1_j00m2"]
[ext_resource type="Shader" path="res://Scripts/Shaders/analog.gdshader" id="2_o8ghg"]
[ext_resource type="Shader" path="res://Scripts/Shaders/forground_shader.gdshader" id="2_xdwda"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qtgp6"]
shader = ExtResource("2_o8ghg")
shader_parameter/crt_brightness = 1.0
shader_parameter/crt_ghost = 0.0
shader_parameter/crt_grid = 0.7
shader_parameter/crt_white_noise = 0.0
shader_parameter/crt_curve = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ef2tf"]
shader = ExtResource("2_xdwda")
shader_parameter/MULTIPLIER = 0.56
shader_parameter/SCALE = 0.5
shader_parameter/SOFTNESS = 1.0
shader_parameter/BASE_OPACITY = 1.0

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_j00m2")

[node name="base_camera" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="base_camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_viewport" type="SubViewport" parent="base_camera/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="background_camera" type="Camera3D" parent="base_camera/background_viewport_container/background_viewport"]
cull_mask = 1

[node name="ColorRect" type="ColorRect" parent="base_camera/background_viewport_container/background_viewport/background_camera"]
material = SubResource("ShaderMaterial_qtgp6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="foreground_viewport_container2" type="SubViewportContainer" parent="base_camera"]
material = SubResource("ShaderMaterial_ef2tf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="foreground_viewport" type="SubViewport" parent="base_camera/foreground_viewport_container2"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="foreground_camera" type="Camera3D" parent="base_camera/foreground_viewport_container2/foreground_viewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00483966, 1.19209e-07, 0.0192647)
cull_mask = 2

[node name="ColorRect" type="ColorRect" parent="base_camera/foreground_viewport_container2/foreground_viewport/foreground_camera"]
material = SubResource("ShaderMaterial_qtgp6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
